# cosmic-python-project

./: .gitignore  README.md
.github/workflows/: python-app.yml
architecture-patterns/: poetry.toml
architecture-patterns/tests/: test_batches.py
chapter01-domain-modeling/: pyproject.toml
chapter01-domain-modeling/app/model/: model.py  my_model.py
chapter01-domain-modeling/tests/: test_batches.py
chapter02-repository-pattern/: pyproject.toml
chapter02-repository-pattern/app/: orm.py  repository.py
chapter02-repository-pattern/tests/: test_allocate.py  test_batches.py
chapter04-add-service-layer/: Dockerfile  Makefile  docker-compose.yaml  docker-compose.yml  pyproject.toml
chapter04-add-service-layer/src/: setup.py
chapter04-add-service-layer/src/allocation/: config.py
chapter04-add-service-layer/src/allocation/adapters/: orm.py  repository.py
chapter04-add-service-layer/src/allocation/domain/: model.py
chapter04-add-service-layer/src/allocation/entrypoints/: flask_app.py
chapter04-add-service-layer/src/allocation/services/: services.py
chapter04-add-service-layer/tests/: conftest.py
chapter04-add-service-layer/tests/e2e/: test_api.py
chapter04-add-service-layer/tests/integration/: test_orm.py  test_repository.py
chapter04-add-service-layer/tests/unit/: test_allocate.py  test_batches.py
