[tool.poetry]
name = "architecture-patterns"
version = "0.1.0"
description = ""
authors = ["Julian <julianlopezscala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
