[tool.poetry]
name = "chapter02-repository-pattern"
version = "0.1.0"
description = ""
authors = ["Julian <julianlopezscala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.9"
SQLAlchemy = "^1.4.26"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
