[tool.poetry]
name = "chapter04-add-service-layer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "2.0.2"
SQLAlchemy = "^1.4.26"
psycopg2-binary = "2.9.3"
requests = "^2.26.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core==1.1.12"]
build-backend = "poetry.core.masonry.api"
